<resources>
    <string name="app_name">FitnessTracking</string>
    <string name="title_activity_login">Log In</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_chart">ChartActivity</string>
    <string name="button_ViewWeather">View Weather Data</string>
    <string name="text_statsTitle">Your Statistics</string>
    <string name="avrg_temp_txt">Average Temperature (°C)</string>
    <string name="avrg_windspeed_txt">Average Windspeed (km/h)</string>
    <string name="hottest_day_text">Hottest Day (°C)</string>
    <string name="coldest_day_text">Coldest Day (°C)</string>
    <string name="button_ViewFitness">View Fitness Data</string>
</resources>
