<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_viewFitness"
        android:layout_width="156dp"
        android:layout_height="47dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/holo_blue_dark"
        android:onClick="viewFitness"
        android:text="@string/button_ViewFitness"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_viewChart"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hottest_day_text"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button_viewChart"
        android:layout_width="156dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/holo_blue_dark"
        android:onClick="viewWeather"
        android:text="@string/button_ViewWeather"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/text_TempAvg"
        android:layout_width="122dp"
        android:layout_height="34dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="12dp"
        android:text="@string/avrg_temp_txt"
        app:layout_constraintEnd_toStartOf="@+id/text_WindAvg"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/averageTemperature" />

    <TextView
        android:id="@+id/averageTemperature"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toStartOf="@+id/averageWindspeed"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_WindAvg"
        android:layout_width="120dp"
        android:layout_height="34dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="12dp"
        android:text="@string/avrg_windspeed_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_TempAvg"
        app:layout_constraintTop_toBottomOf="@+id/averageWindspeed" />

    <TextView
        android:id="@+id/averageWindspeed"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/averageTemperature"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hottest_day_text"
        android:layout_width="120dp"
        android:layout_height="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="12dp"
        android:text="@string/hottest_day_text"
        app:layout_constraintEnd_toStartOf="@+id/coldest_day_text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hottestDay" />

    <TextView
        android:id="@+id/hottestDay"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toStartOf="@+id/coldestDay"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_TempAvg" />

    <TextView
        android:id="@+id/coldest_day_text"
        android:layout_width="120dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/coldest_day_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/hottest_day_text"
        app:layout_constraintTop_toBottomOf="@+id/coldestDay" />

    <TextView
        android:id="@+id/coldestDay"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/hottestDay"
        app:layout_constraintTop_toBottomOf="@+id/text_WindAvg" />

    <TextView
        android:id="@+id/text_StatsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="47dp"
        android:text="@string/text_statsTitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/text_statsTitle" />

    <Button
        android:id="@+id/button"
        android:layout_width="130dp"
        android:layout_height="36dp"
        android:layout_marginTop="410dp"
        android:background="@android:color/holo_green_dark"
        android:onClick="viewPrediction"
        android:text="Prediction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>